crates/flowscope-core/tests/snapshots/snapshots__run_snapshot_test@dml_update_with_from.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "UPDATE",
      "joinCount": 0,
      "complexityScore": 10
    }
  ],
  "nodes": [
    {
      "id": "column_11fa415539b7dba5",
      "type": "column",
      "label": "updated_at",
      "canonicalName": {
        "name": "updated_at"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_74c341704cf4e26f",
      "type": "column",
      "label": "status",
      "canonicalName": {
        "name": "status"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_e500054d128e991c",
      "type": "table",
      "label": "customers",
      "qualifiedName": "customers",
      "canonicalName": {
        "name": "customers"
      },
      "statementIds": [
        0
      ],
      "metadata": {
        "occurrenceSourceNames": [
          null
        ],
        "occurrenceSpans": [
          {
            "start": 92,
            "end": 101
          }
        ],
        "occurrenceStatementIds": [
          0
        ]
      }
    },
    {
      "id": "table_eaa6ebb8f158751f",
      "type": "table",
      "label": "orders",
      "qualifiedName": "orders",
      "canonicalName": {
        "name": "orders"
      },
      "statementIds": [
        0
      ],
      "metadata": {
        "occurrenceSourceNames": [
          null
        ],
        "occurrenceSpans": [
          {
            "start": 16,
            "end": 22
          }
        ],
        "occurrenceStatementIds": [
          0
        ]
      }
    }
  ],
  "edges": [
    {
      "id": "edge_7f782d3c9f01e6e0",
      "from": "table_e500054d128e991c",
      "to": "table_eaa6ebb8f158751f",
      "type": "data_flow",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_b508dc70429346a4",
      "from": "table_eaa6ebb8f158751f",
      "to": "column_74c341704cf4e26f",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_f14f4de07f83be24",
      "from": "table_eaa6ebb8f158751f",
      "to": "column_11fa415539b7dba5",
      "type": "ownership",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 2,
    "columnCount": 2,
    "joinCount": 0,
    "complexityScore": 10,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  },
  "resolvedSchema": {
    "tables": [
      {
        "name": "customers",
        "columns": [
          {
            "name": "id",
            "origin": "implied"
          },
          {
            "name": "region",
            "origin": "implied"
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z"
      },
      {
        "name": "orders",
        "columns": [
          {
            "name": "customer_id",
            "origin": "implied"
          }
        ],
        "origin": "implied",
        "sourceStatementIndex": 0,
        "updatedAt": "2024-01-01T00:00:00Z"
      }
    ]
  }
}
